--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -671,7 +671,7 @@ jobs:
           pushd stream-applications > /dev/null
             echo "::notice ::uploading unique version snapshot descriptors"
             set -e
-            SRC_ROOT=$ROOT_DIR/stream-applications/stream-applications-release-train/stream-applications-descriptor/target/classes/META-INF
+            SRC_ROOT=$ROOT_DIR/stream-applications-release-train/stream-applications-descriptor/target/classes/META-INF
             TARGET_REPO=https://repo.spring.io/artifactory/libs-snapshot-local/org/springframework/cloud/stream/app/stream-applications-descriptor/${RELEASE_TRAIN_VERSION}/stream-applications-descriptor
             jfrog rt upload "$SRC_ROOT/kafka-apps-maven.properties" "${TARGET_REPO}-${RELEASE_TRAIN_VERSION}.stream-apps-kafka-maven"
             jfrog rt upload "$SRC_ROOT/kafka-apps-docker.properties" "${TARGET_REPO}-${RELEASE_TRAIN_VERSION}.stream-apps-kafka-docker"
@@ -694,6 +694,9 @@ jobs:
           path: '**/target/surefire-reports'
           retention-days: 7
           if-no-files-found: ignore
+      # set all properties for buildName and buildNumber using a list of all built artifacts and version.
+      # use frog download of all builds.
+      # use nexus-sync
       - name: Tag Release
         if: ${{ needs.parameters.outputs.is_version_change == 'true' }}
         shell: bash
@@ -706,6 +709,8 @@ jobs:
             git tag "v${{ needs.parameters.outputs.release_train_version }}"
             git push --tags -v origin
           popd > /dev/null
+      # add jfrog download
+      # nexus-sync
       - name: 'Action: update next dev version'
         if: ${{ needs.parameters.outputs.is_version_change == 'true' }}
         shell: bash
