--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -658,10 +658,8 @@ jobs:
       - name: 'Configure: Install libxml2-utils'
         uses: ./.github/actions/install-libxml2-utils
       - uses: jfrog/setup-jfrog-cli@v3
-        with:
-          version: 1.46.4
         env:
-          JF_ARTIFACTORY_SPRING: ${{ secrets.JF_ARTIFACTORY_SPRING }}
+          JF_ENV_1: ${{ secrets.JF_ARTIFACTORY_SPRING }}
       - name: Upload descriptors
         if: ${{ needs.parameters.outputs.build_version_type == 'snapshot' }}
         shell: bash
