--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -234,6 +234,22 @@ jobs:
           set +e
           echo "::notice ::core build completed"
           popd > /dev/null
+      - name: Unit Test Report
+        uses: dorny/test-reporter@v1
+        if: ${{ success() || failure() }}
+        with:
+          name: Unit Tests
+          path: '**/surefire-reports/*.xml'
+          fail-on-empty: false
+          reporter: java-junit
+      - name: Integration Test Report
+        uses: dorny/test-reporter@v1
+        if: ${{ success() || failure() }}
+        with:
+          name: Integration Tests
+          path: '**/failsafe-reports/*.xml'
+          reporter: java-junit
+          fail-on-empty: false
       - name: 'Upload: Test Reports'
         if: ${{ always() }}
         uses: actions/upload-artifact@v3
@@ -356,6 +372,22 @@ jobs:
           VERBOSE: ${{ (github.debug || inputs.verbose) && 'true' || '' }}
           MAVEN_THREADS: ${{ inputs.mavenThreads }}
         run: ./build-app.sh "stream-applications" "applications/processor/${{ matrix.app }}"
+      - name: Unit Test Report
+        uses: dorny/test-reporter@v1
+        if: ${{ success() || failure() }}
+        with:
+          name: Unit Tests
+          path: '**/surefire-reports/*.xml'
+          fail-on-empty: false
+          reporter: java-junit
+      - name: Integration Test Report
+        uses: dorny/test-reporter@v1
+        if: ${{ success() || failure() }}
+        with:
+          name: Integration Tests
+          path: '**/failsafe-reports/*.xml'
+          reporter: java-junit
+          fail-on-empty: false
       - name: 'Upload: Test Reports'
         if: ${{ always() }}
         uses: actions/upload-artifact@v3
@@ -465,6 +497,22 @@ jobs:
           path: '**/target/surefire-reports'
           retention-days: 7
           if-no-files-found: ignore
+      - name: Unit Test Report
+        uses: dorny/test-reporter@v1
+        if: ${{ success() || failure() }}
+        with:
+          name: Unit Tests
+          path: '**/surefire-reports/*.xml'
+          fail-on-empty: false
+          reporter: java-junit
+      - name: Integration Test Report
+        uses: dorny/test-reporter@v1
+        if: ${{ success() || failure() }}
+        with:
+          name: Integration Tests
+          path: '**/failsafe-reports/*.xml'
+          reporter: java-junit
+          fail-on-empty: false
       - name: 'Publish: ${{ matrix.app }}'
         shell: bash
         env:
@@ -558,6 +606,22 @@ jobs:
           VERBOSE: ${{ (github.debug || inputs.verbose) && 'true' || '' }}
           MAVEN_THREADS: ${{ inputs.mavenThreads }}
         run: ./build-app.sh "stream-applications" "applications/source/${{ matrix.app }}"
+      - name: Unit Test Report
+        uses: dorny/test-reporter@v1
+        if: ${{ success() || failure() }}
+        with:
+          name: Unit Tests
+          path: '**/surefire-reports/*.xml'
+          fail-on-empty: false
+          reporter: java-junit
+      - name: Integration Test Report
+        uses: dorny/test-reporter@v1
+        if: ${{ success() || failure() }}
+        with:
+          name: Integration Tests
+          path: '**/failsafe-reports/*.xml'
+          reporter: java-junit
+          fail-on-empty: false
       - name: 'Upload: Test Reports'
         if: ${{ always() }}
         uses: actions/upload-artifact@v3
@@ -688,6 +752,22 @@ jobs:
         run: |
           ./set-doc-properties.sh "${{ needs.parameters.outputs.release_train_version }}"                    
           echo "::notice ::stream-applications-release-train build completed"
+      - name: Unit Test Report
+        uses: dorny/test-reporter@v1
+        if: ${{ success() || failure() }}
+        with:
+          name: Unit Tests
+          path: '**/surefire-reports/*.xml'
+          fail-on-empty: false
+          reporter: java-junit
+      - name: Integration Test Report
+        uses: dorny/test-reporter@v1
+        if: ${{ success() || failure() }}
+        with:
+          name: Integration Tests
+          path: '**/failsafe-reports/*.xml'
+          reporter: java-junit
+          fail-on-empty: false
       - name: 'Upload: Test Reports'
         if: ${{ always() }}
         uses: actions/upload-artifact@v3
