--- a/applications/stream-applications-integration-tests/pom.xml
+++ b/applications/stream-applications-integration-tests/pom.xml
@@ -98,7 +98,11 @@
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>localstack</artifactId>
+			<version>${testcontainers.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
