--- a/.github/workflows/ci-it.yml
+++ b/.github/workflows/ci-it.yml
@@ -71,6 +71,13 @@ jobs:
           fi
           export VERBOSE
           ./run-ITs.sh
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: ${{ success() || failure() }}
+        with:
+          name: Unit Tests
+          path: '**/surefire-reports/*.xml'
+          reporter: java-junit
       - name: 'Upload: Error logs'
         if: ${{ failure() }}
         uses: actions/upload-artifact@v3
