Upgrade to latest SI-AWS for S3
* Fix `AwsS3SupplierConfiguration` to
serialize `S3Object` to JSON

--- a/functions/common/aws-s3-common/pom.xml
+++ b/functions/common/aws-s3-common/pom.xml
@@ -25,8 +25,8 @@
         </dependency>
 
         <dependency>
-            <groupId>software.amazon.awssdk.crt</groupId>
-            <artifactId>aws-crt</artifactId>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>aws-crt-client</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.integration</groupId>
