--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -248,7 +248,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: ${{ success() || failure() }}
         with:
-          name: Unit Tests
+          name: Unit Tests - Core
           path: '**/surefire-reports/*.xml'
           fail-on-empty: false
           reporter: java-junit
@@ -256,7 +256,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: ${{ success() || failure() }}
         with:
-          name: Integration Tests
+          name: Integration Tests - Core
           path: '**/failsafe-reports/*.xml'
           reporter: java-junit
           fail-on-empty: false
@@ -388,7 +388,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: ${{ success() || failure() }}
         with:
-          name: Unit Tests
+          name: Unit Tests - Processors
           path: '**/surefire-reports/*.xml'
           fail-on-empty: false
           reporter: java-junit
@@ -396,7 +396,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: ${{ success() || failure() }}
         with:
-          name: Integration Tests
+          name: Integration Tests - Processors
           path: '**/failsafe-reports/*.xml'
           reporter: java-junit
           fail-on-empty: false
@@ -515,7 +515,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: ${{ success() || failure() }}
         with:
-          name: Unit Tests
+          name: Unit Tests - Sinks
           path: '**/surefire-reports/*.xml'
           fail-on-empty: false
           reporter: java-junit
@@ -523,7 +523,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: ${{ success() || failure() }}
         with:
-          name: Integration Tests
+          name: Integration Tests - Sinks
           path: '**/failsafe-reports/*.xml'
           reporter: java-junit
           fail-on-empty: false
@@ -626,7 +626,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: ${{ success() || failure() }}
         with:
-          name: Unit Tests
+          name: Unit Tests - Sources
           path: '**/surefire-reports/*.xml'
           fail-on-empty: false
           reporter: java-junit
@@ -634,7 +634,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: ${{ success() || failure() }}
         with:
-          name: Integration Tests
+          name: Integration Tests - Sources
           path: '**/failsafe-reports/*.xml'
           reporter: java-junit
           fail-on-empty: false
@@ -774,7 +774,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: ${{ success() || failure() }}
         with:
-          name: Unit Tests
+          name: Unit Tests - Release Train
           path: '**/surefire-reports/*.xml'
           fail-on-empty: false
           reporter: java-junit
@@ -782,7 +782,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: ${{ success() || failure() }}
         with:
-          name: Integration Tests
+          name: Integration Tests - Release Train
           path: '**/failsafe-reports/*.xml'
           reporter: java-junit
           fail-on-empty: false
@@ -848,7 +848,12 @@ jobs:
             git commit -a -m "Next development version ${{ needs.parameters.outputs.next_dev_version }} / ${{ needs.parameters.outputs.release_train_next_dev_version }}"
             git push -v origin 
           popd > /dev/null
-
+      - name: 'Start Integration Tests for ${{ needs.parameters.outputs.build_version }}'
+        if: ${{ success() }}
+        shell: bash
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh workflow run ci-it.yml --field version=${{ needs.parameters.outputs.build_version }} --json
 
   rerun-jobs:
     if: ${{ failure() && github.run_attempt == '1' }}
