[Release] 4.0.0 Release Train 2022.0.0

--- a/stream-applications-release-train/pom.xml
+++ b/stream-applications-release-train/pom.xml
@@ -19,7 +19,7 @@
 
     <properties>
         <apps.version>4.0.0-SNAPSHOT</apps.version>
-        <apps.harbor.version>3.2.0</apps.harbor.version>
+        <apps.harbor.version>${apps.version}</apps.harbor.version>
         <apps.docker.tag>${apps.version}</apps.docker.tag>
     </properties>
 
