[Apps Plugin] [CI] Add description to commit message in next dev version

--- a/.github/workflows/apps-plugin-next-dev-version.yml
+++ b/.github/workflows/apps-plugin-next-dev-version.yml
@@ -63,7 +63,7 @@ jobs:
         uses: jvalkeal/build-zoo-handler@v0.0.4
         with:
           commit-changes-branch: main
-          commit-changes-message: Next development version
+          commit-changes-message: "[Apps Plugin ${project.version}] Next development version"
       - name: Clean cache
         run: |
           find ~/.m2/repository -type d -name '*SNAPSHOT' | xargs rm -fr
